allow multiple degrees using formset

--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -56,6 +56,10 @@ a.no-dec {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.margin-top-lg {
+  margin-top: 30px;
+}
 /* rules for profile page, mostly */
 .profile-name h3 {
     line-height: 1;
