--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -34,6 +34,8 @@
             {% if not user.is_authenticated %}
               <li><a href="{% url 'login' %}">Login</a></li>
             {% else %}
+              <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
+              <li><a href="{% url 'mccalendar:event_list' %}">Events</a></li>
               <li><a href="{% url 'scholars' %}">All Scholars</a></li>
               <li><a href="{% url 'own_profile' %}">My Profile</a></li>
               <li><a href="{% url 'logout' %}">Logout</a></li>
