--- a/mccalendar/templates/mccalendar/edit_event.html
+++ b/mccalendar/templates/mccalendar/edit_event.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form method="post" action="{% url 'mccalendar:create_event' %}">
+<form method="post" action="{% url 'calendar:edit_event' %}" class="form-horizontal">
 {% csrf_token %}
 <ul>
 {% for error in form.errors %}
@@ -13,38 +13,38 @@
   <label for="id_{{ form.subject.name }}">
     Subject
   </label>
-  <span class="mdl-textfield__error">{{ form.subject.errors }}</span>
+  <span class="">{{ form.subject.errors }}</span>
 </div>
 <div>
   {{ form.description }}
   <label for="id_{{ form.description.name }}">
     Description
   </label>
-  <span class="mdl-textfield__error">{{ form.description.errors }}</span>
+  <span class="">{{ form.description.errors }}</span>
 </div
 <div>
   {{ form.start_date }}
   <label for="id_{{ form.start_date.name }}">
     Start Date
   </label>
-  <span class="mdl-textfield__error">{{ form.start_date.errors }}</span>
+  <span class="">{{ form.start_date.errors }}</span>
     {{ form.start_time }}
     <label for="id_{{ form.start_time.name }}">
       Start Time
     </label>
-  <span class="mdl-textfield__error">{{ form.start_time.errors }}</span>
+  <span class="">{{ form.start_time.errors }}</span>
 </div>
   <div>
     {{ form.end_date }}
     <label for="id_{{ form.end_date.name }}">
       End Date
     </label>
-    <span class="mdl-textfield__error">{{ form.end_date.errors }}</span>
+    <span class="">{{ form.end_date.errors }}</span>
     {{ form.end_time }}
     <label for="id_{{ form.end_time.name }}">
       End Time
     </label>
-    <span class="mdl-textfield__error">{{ form.end_time.errors }}</span>
+    <span class="">{{ form.end_time.errors }}</span>
   </div>
   <input type="submit" value="save"/>
 </form>
