--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -8,7 +8,7 @@
   <ul class="nav nav-tabs nav-justified">
     <li role="presentation" class="active"><a>Profile</a></li>
     <li role="presentation"><a href="{% url 'edit_edu' %}">Education</a></li>
-    <li role="presentation"><a href="#">Experience</a></li>
+    <li role="presentation"><a href="{% url 'edit_exp' %}">Experience</a></li>
     <li role="presentation"><a href="#">Study Abroad</a></li>
   </ul>
   <br>
