--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -36,6 +36,7 @@
             {% else %}
               <li><a href="{% url 'mccalendar:index' %}">Calendar</a></li>
               <li><a href="{% url 'mccalendar:event_list' %}">Events</a></li>
+              <li><a href="{% url 'documents' %}">Documents</a></li>
               <li><a href="{% url 'scholars' %}">All Scholars</a></li>
               <li><a href="{% url 'own_profile' %}">My Profile</a></li>
               <li><a href="{% url 'logout' %}">Logout</a></li>
