--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -24,6 +24,10 @@
 </div>
 
 <h4>Education</h4>
+<span class="profile-show">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#education">Show</button>
+</span>
+<div id="education" class="collapse">
 {% for degree in profile.degrees.all %}
   <div class="experience">
     <p class="school-name">School: {{ degree.school }}</p>
@@ -45,9 +49,14 @@
     {% endfor %}
   </div>
 {% endfor %}
+</div>
 
 <h4>Experience</h4>
-{% for experience in profile.experiences.all %}
+<span class="profile-show">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#experience">Show</button>
+</span>
+<div id="experience" class="collapse">
+  {% for experience in profile.experiences.all %}
   <div class="experience">
     <p>Title: {{ experience.title }}</p>
     <p>Organization: {{ experience.organization }}</p>
@@ -55,9 +64,13 @@
     <p>Type: {{ experience.exp_type }}</p>
     <p>Time period: {{ experience.start_time }} - {{ experience.end_time }}</p>
   </div>
-{% endfor %}
+  {% endfor %}
+</div>
 
 <h4>Study Abroad</h4>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#study-abroad">Show</button>
+<div id="study-abroad" class="collapse">
+</div>
 
 {% if edit %}
   <a href="{% url 'edit_info' %}" class="btn btn-default">Edit Profile</a>
