--- a/core/templates/core/edit_info.html
+++ b/core/templates/core/edit_info.html
@@ -9,7 +9,7 @@
     <li role="presentation" class="active"><a>Profile</a></li>
     <li role="presentation"><a href="{% url 'edit_edu' %}">Education</a></li>
     <li role="presentation"><a href="{% url 'edit_exp' %}">Experience</a></li>
-    <li role="presentation"><a href="#">Study Abroad</a></li>
+    <li role="presentation"><a href="{% url 'edit_abroad' %}">Study Abroad</a></li>
   </ul>
   <br>
   {% if form.errors %}
