--- a/core/templates/core/edit_edu.html
+++ b/core/templates/core/edit_edu.html
@@ -9,7 +9,7 @@
     <li role="presentation"><a href="{% url 'edit_info' %}">Profile</a></li>
     <li role="presentation" class="active"><a>Education</a></li>
     <li role="presentation"><a href="{% url 'edit_exp' %}">Experience</a></li>
-    <li role="presentation"><a href="#">Study Abroad</a></li>
+    <li role="presentation"><a href="{% url 'edit_abroad' %}">Study Abroad</a></li>
   </ul>
   <br>
   <form method="post" action="{% url 'edit_edu' %}" class="form-horizontal">
